@@ -3752,6 +3752,7 @@
    <date>2014-09-05</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix saving unique browser preferences for a specific backend in dynamic view.
 * [mms] Fix toggling select all checkbox in both dynamic mailbox layouts.
    </notes>
   </release>
